# robocodec

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_zh.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  README_zh.md  REUSE.toml  SECURITY.md  SECURITY_zh.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
LICENSES/: MulanPSL-2.0.txt
coverage/html/: index.html
examples/python/: README.md  _example_utils.py  filter_topics.py  inspect_mcap.py  mcap_stats.py  mcap_to_bag.py  topic_rename.py
githooks/: pre-commit
python/robocodec/: __init__.py  _robocodec.pyi
scripts/: setup-hooks.sh
src/: lib.rs
src/core/: error.rs  mod.rs  registry.rs  value.rs
src/encoding/: codec.rs  mod.rs  registry.rs  transform.rs
src/encoding/cdr/: calculator.rs  codec.rs  cursor.rs  decoder.rs  encoder.rs  mod.rs  plan.rs
src/encoding/json/: decoder.rs  mod.rs
src/encoding/protobuf/: codec.rs  decoder.rs  mod.rs
src/io/: arena.rs  detection.rs  filter.rs  metadata.rs  mod.rs  traits.rs
src/io/formats/: mod.rs
src/io/formats/bag/: mod.rs  parallel.rs  parser.rs  reader.rs  (+2 more)
src/io/reader/: builder.rs  mod.rs  strategy.rs
src/io/writer/: builder.rs  mod.rs  write_strategy.rs
src/python/: convert.rs  error.rs  metadata.rs  mod.rs  reader.rs  rewriter.rs  transform.rs  writer.rs
src/rewriter/: bag.rs  engine.rs  facade.rs  mcap.rs  mod.rs
src/schema/: ast.rs  builtin_types.rs  descriptor.rs  mod.rs
src/schema/parser/: mod.rs  schema.pest  unified.rs
src/transform/: mod.rs  normalization.rs  pipeline.rs  topic_rename.rs  type_rename.rs
src/types/: arena.rs  arena_pool.rs  buffer_pool.rs  chunk.rs  mod.rs
tests/: bag_decode_tests.rs  bag_rewriter_tests.rs  bag_writer_tests.rs  cdr_cross_language_tests.rs  cdr_encoding_tests.rs  cli_tests.rs  idl_type_resolution_tests.rs  io_tests.rs  mcap_round_trip_tests.rs  mcap_writer_tests.rs  round_trip_tests.rs  schema_preservation_tests.rs  schema_resolution_test.rs  two_pass_mcap_tests.rs  writer_tests.rs
tests/common/: mod.rs
tests/fixtures/: lerobot.toml  normalize.toml  robocodec_test_0.mcap  robocodec_test_1.mcap  robocodec_test_10.mcap  robocodec_test_11.mcap  robocodec_test_12.mcap  robocodec_test_13.mcap  robocodec_test_14.mcap  robocodec_test_16.mcap  robocodec_test_18.bag  robocodec_test_19.bag  robocodec_test_20.bag  robocodec_test_21.bag  robocodec_test_23.bag  robocodec_test_3.mcap  robocodec_test_4.mcap  robocodec_test_5.mcap  robocodec_test_6.mcap  robocodec_test_7.mcap  robocodec_test_8.mcap  robocodec_test_9.mcap
tests/python/: __init__.py  conftest.py  test_bindings.py  test_integration.py
(+71 files in other folders)
